compiler/acton/test/typeerrors/ex27.act
class Foo(object):
    def __init__(self):
        pass

    def foo(a: int):
        return 42
